--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
 		<title>Multirae</title>
-		<link rel="stylesheet" type="text/css"href="/css/login/login.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -21,7 +20,8 @@
 		<link rel="stylesheet" type="text/css" href="/css/cadastro/formulario.css">
 
 		<!--JQUERY-->
-		<script src="./js/home/login.js"></script>
+		<script src="./js/timeline/timeline.js"></script>
+		<script src="./js/timeline/removeMutiroes.js"></script>
 
   </head>
   <body>
